# automaid

./: README.md  pyproject.toml
automaid/: __init__.py  __main__.py  cli.py  preflight.py
scripts/: cycles.py  events.py  gps.py  main.py  preprocess.py  rbr.py  setup.py  utils.py
